--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="crime_solved_label">Solved</string>
     <string name="crime_title_list">Crime Title</string>
     <string name="crime_date_list">Crime Date</string>
+    <string name="date_picker_title">Date of crime:</string>
 </resources>
